@@ -1,0 +1,68 @@
+/**
+ * @author Atramez_Zeton http://onyx-sy.net
+ * @license [MIT](http://www.opensource.org/licenses/mit-license.php)
+ */
+(function ($) {
+	'use strict';
+
+	$.sceditor.locale["ar"] = {
+		"Bold": "عريض",
+		"Italic": "مائل",
+		"Underline": "خط من الأسفل",
+		"Strikethrough": "خط في المنتصف",
+		"Subscript": "حرف منخفض",
+		"Superscript": "حرف مرتفع",
+		"Align left": "انحياز إلى اليسار",
+		"Center": "توسط",
+		"Align right": "انحياز إالى اليمين",
+		"Justify": "ملأ السطر",
+		"Font Name": "نوع الخط",
+		"Font Size": "حجم الخط",
+		"Font Color": "لون الخط",
+		"Remove Formatting": "ازالة التعديلات",
+		"Cut": "قص",
+		"Your browser does not allow the cut command. Please use the keyboard shortcut Ctrl/Cmd-X": "Ctrl/Cmd-X متصفحك لا يدعم اوامر القص الرجاء استخدام اختصارات لوحة التحكم",
+		"Copy": "نسخ",
+		"Your browser does not allow the copy command. Please use the keyboard shortcut Ctrl/Cmd-C": "Ctrl/Cmd-C متصفحك لا يدعم اوامر النسخ الرجاء استخدام اختصارات لوحة التحكم",
+		"Paste": "لصق",
+		"Your browser does not allow the paste command. Please use the keyboard shortcut Ctrl/Cmd-V": "Ctrl/Cmd-V متصفحك لا يدعم اوامر اللصق الرجاء استخدام اختصارات لوحة التحكم",
+		"Paste your text inside the following box:": "قم بلصق نصّك في المربع",
+		"Paste Text": "الصق النص",
+		"Bullet list": "قائمة نقطية",
+		"Numbered list": "قائمة مرقمة",
+		"Undo": "تراجع",
+		"Redo": "تقدم",
+		"Rows:": "اسطر",
+		"Cols:": "اعمدة",
+		"Insert a table": "ادرج جدول",
+		"Insert a horizontal rule": "ادرج مسطرة افقية",
+		"Code": "كود",
+		"Width (optional):": "عرض (اختياري)",
+		"Height (optional):": "ارتفاع (اختياري)",
+		"Insert an image": "ادرج صورة",
+		"E-mail:": "بريد الكتروني",
+		"Insert an email": "ادرج بريدا الكترونيا",
+		"URL:": "وصلة موقع",
+		"Insert a link": "ادرج وصلة لموقع",
+		"Unlink": "ازالة الوصلة",
+		"More": "المزيد",
+		"Insert an emoticon": "ادرج وجها",
+		"Video URL:": "وصلة فيديو",
+		"Insert": "ادرج",
+		"Insert a YouTube video": "ادرج وصلة فيديو يوتيوب",
+		"Insert current date": "ادرج التاريخ الحالي",
+		"Insert current time": "ادرج الوقت الحالي",
+		"Print": "اطبع",
+		"View source": "اظهر المصدر",
+		"Description (optional):": "الوصف (اختياري)",
+		"Enter the image URL:": "ضع وصلة الصورة",
+		"Enter the e-mail address:": "ضع عنوان البريد الإلكتروني",
+		"Enter the displayed text:": "ضع النص الذي تريد اظهاره",
+		"Enter URL:": "ضع وصلة موقع",
+		"Enter the YouTube video URL or ID:": "ضع وصلة فيديو يوتيوب او رقم الفيديو",
+		"Insert a Quote":"ادرج اقتباسا",
+		"Invalid YouTube video": "هذا الفيديو غير صالح",
+
+		dateFormat: "day-month-year"
+	};
+})(jQuery);
