@@ -15,6 +15,8 @@ Version 1.4.1:
 	Added nodechanged event.
 	Improved BBCode attribute quoting support.
 		- Thanks to @Spuds for reporting
+	Added Arabic translation.
+		- Thanks to @Atramez-Zeton for translating
 
 Version 1.4.0:
 	New theme "square" added
